<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.inventory.InsertActivity">
    <!-- Name field -->
    <EditText
        android:id="@+id/edit_product_name"
        android:hint="@string/hint_product_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />

    <!-- Quantity field -->

    <EditText
        android:id="@+id/edit_product_quantity"
        android:hint="@string/hint_product_quantity"
        android:inputType="number"
        style="@style/EditorFieldStyle" />

    <!-- Price field -->
    <EditText
        android:id="@+id/edit_product_price"
        android:hint="@string/hint_product_price"
        android:inputType="number"
        style="@style/EditorFieldStyle" />

    <!-- Description field -->
    <EditText
        android:id="@+id/edit_product_description"
        android:hint="@string/hint_product_description"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />

    <!-- Button to add image captured from camera-->
    <Button
        android:id="@+id/add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_image"/>
    <EditText
        android:id="@+id/edit_supplier_name"
        android:hint="@string/hint_supplier_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />
    <EditText
        android:id="@+id/edit_supplier_email"
        android:hint="@string/hint_supplier_email_address"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />
    <Button
        android:id="@+id/insert_into_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert"/>

</LinearLayout>
